syntax = "proto3";

package squad.farm.v1beta1;

import "gogoproto/gogo.proto";
import "google/api/annotations.proto";
import "cosmos/base/v1beta1/coin.proto";
import "cosmos/base/query/v1beta1/pagination.proto";
import "squad/farm/v1beta1/farm.proto";

option go_package = "github.com/cosmosquad-labs/squad/x/farm/types";

service Query {
  rpc Params(QueryParamsRequest) returns (QueryParamsResponse) {
    option (google.api.http).get = "/squad/farm/v1beta1/params";
  }
  rpc Plans(QueryPlansRequest) returns (QueryPlansResponse) {
    option (google.api.http).get = "/squad/farm/v1beta1/plans";
  }
  rpc Plan(QueryPlanRequest) returns (QueryPlanResponse) {
    option (google.api.http).get = "/squad/farm/v1beta1/plan/{plan_id}";
  }
  rpc Farm(QueryFarmRequest) returns (QueryFarmResponse) {
    option (google.api.http).get = "/squad/farm/v1beta1/farms/{denom}";
  }
  rpc Positions(QueryPositionsRequest) returns (QueryPositionsResponse) {
    option (google.api.http).get = "/squad/farm/v1beta1/positions/{farmer}";
  }
  rpc Position(QueryPositionRequest) returns (QueryPositionResponse) {
    option (google.api.http).get = "/squad/farm/v1beta1/positions/{farmer}/{denom}";
  }
  rpc HistoricalRewards(QueryHistoricalRewardsRequest) returns (QueryHistoricalRewardsResponse) {
    option (google.api.http).get = "/squad/farm/v1beta1/historical_rewards/{denom}";
  }
}

message QueryParamsRequest {}

message QueryParamsResponse {
  Params params = 1 [(gogoproto.nullable) = false];
}

message QueryPlansRequest {
  cosmos.base.query.v1beta1.PageRequest pagination = 1;
}

message QueryPlansResponse {
  repeated Plan                          plans      = 1 [(gogoproto.nullable) = false];
  cosmos.base.query.v1beta1.PageResponse pagination = 2;
}

message QueryPlanRequest {
  uint64 plan_id = 1;
}

message QueryPlanResponse {
  Plan plan = 1 [(gogoproto.nullable) = false];
}

message QueryFarmRequest {
  string denom = 1;
}

message QueryFarmResponse {
  Farm farm = 1 [(gogoproto.nullable) = false];
}

message QueryPositionsRequest {
  string                                farmer     = 1;
  cosmos.base.query.v1beta1.PageRequest pagination = 2;
}

message QueryPositionsResponse {
  repeated Farm                          farms      = 1 [(gogoproto.nullable) = false];
  cosmos.base.query.v1beta1.PageResponse pagination = 2;
}

message QueryPositionRequest {
  string farmer = 1;
  string denom  = 2;
}

message QueryPositionResponse {
  Farm farm = 1 [(gogoproto.nullable) = false];
}

message QueryHistoricalRewardsRequest {
  string                                denom      = 1;
  cosmos.base.query.v1beta1.PageRequest pagination = 2;
}

message QueryHistoricalRewardsResponse {
  repeated HistoricalRewardsResponse     historical_rewards = 1 [(gogoproto.nullable) = false];
  cosmos.base.query.v1beta1.PageResponse pagination         = 2;
}

message HistoricalRewardsResponse {
  uint64   period                                              = 1;
  repeated cosmos.base.v1beta1.DecCoin cumulative_unit_rewards = 2
      [(gogoproto.castrepeated) = "github.com/cosmos/cosmos-sdk/types.DecCoins", (gogoproto.nullable) = false];
  uint32 reference_count = 3;
}